@@ -27,7 +27,7 @@ jobs:
             fail-fast: false
             matrix:
                 python-version: [ "3.8", "3.9", "3.10" ]
-                django-version: [ "2.2", "3.2", "4.0" ]
+                django-version: [ "3.2", "4.0" ]
         env:
             PY_VER: ${{ matrix.python-version}}
             DJ_VER: ${{ matrix.django-version}}
