@@ -1,0 +1,16 @@
+[pytest]
+python_paths=./tests/demo
+DJANGO_SETTINGS_MODULE=demoproject.settings
+django_find_project = false
+norecursedirs = .tox .venv
+python_files=tests/test_*.py
+log_print = false
+log_cli = false
+addopts =
+        -rs
+        --tb=short
+        --capture=sys
+        --cov=strategy_field
+        --cov-report=html
+        --cov-config=tests/.coveragerc
+
