@@ -119,8 +119,9 @@ def test_form_default(demo_multiplecustom_model):
 @pytest.mark.django_db
 def test_admin_demo_multiple_model_add(webapp, admin_user):
     res = webapp.get('/demoapp/demomultiplecustommodel/add/', user=admin_user)
-    res.form['sender'].force_value(['demoproject.demoapp.models.Strategy'])
-    res.form.submit().follow()
+    form = res.forms[1]
+    form['sender'].force_value(['demoproject.demoapp.models.Strategy'])
+    form.submit().follow()
     assert DemoMultipleCustomModel.objects.filter(
         sender='demoproject.demoapp.models.Strategy').count() == 1
 
@@ -136,10 +137,10 @@ def test_admin_demo_multiple_model_edit(webapp, admin_user, demo_multiplecustom_
                                              ('demoproject.demoapp.models.Strategy1',
                                               'demoproject.demoapp.models.Strategy1')]
 
-
-    res.form['sender'] = ['demoproject.demoapp.models.Strategy',
+    form = res.forms[1]
+    form['sender'] = ['demoproject.demoapp.models.Strategy',
                           'demoproject.demoapp.models.Strategy1']
-    res.form.submit().follow()
+    form.submit().follow()
     res = webapp.get(url, user=admin_user)
     assert res.context['adminform'].form.fields['sender'].choices == [('demoproject.demoapp.models.Strategy',
                                                                        'demoproject.demoapp.models.Strategy'),
