@@ -1,25 +1,8 @@
 [tox]
 # as per https://docs.djangoproject.com/en/1.11/faq/install/#what-python-version-can-i-use-with-django
-envlist = d{22,32,40}-py{38,39,310}
+envlist = d{32,40}-py{38,39,310}
 ;isolated_build = true
 skip_missing_interpreters = true
-
-[pytest]
-python_paths=./tests/demo
-DJANGO_SETTINGS_MODULE=demoproject.settings
-django_find_project = false
-norecursedirs = .tox .venv
-python_files=tests/test_*.py
-log_print = false
-log_cli = false
-addopts =
-        -rs
-        --tb=short
-        --capture=no
-        --cov=strategy_field
-        --cov-report=html
-        --cov-config=tests/.coveragerc
-
 
 [testenv]
 ;passenv = TRAVIS TRAVIS_JOB_ID TRAVIS_BRANCH PYTHONDONTWRITEBYTECODE DISPLAY
@@ -30,7 +13,7 @@ setenv =
 extras = test
 
 deps=
-    .[test]
+    .[test,drf]
     d22: django==2.2.*
     d31: django==3.1.*
     d32: django==3.2.*
